# ai_worker

./: .gitignore  ai_worker_changes.patch  test.txt
.github/workflows/: ros-ci.yml
docker/: 99-ai-worker.rules  99-ffw-lg2-mini.rules  Dockerfile.amd64  Dockerfile.arm64  container.sh  docker-compose.novnc.yml  docker-compose.yml  gen_cert.sh
docker/s6-agent/: finish  run
ffw/: CHANGELOG.rst  package.xml
ffw_bringup/: CHANGELOG.rst  package.xml  setup.py
ffw_bringup/launch/: camera.launch.py  camera_realsense.launch.py  ffw_a2_ai.launch.py  ffw_a3_ai.launch.py  ffw_bg2_follower_ai.launch.py  ffw_bg2_follower_ai_gazebo.launch.py  ffw_bh5_follower_ai.launch.py  ffw_bh5_follower_ai_gazebo.launch.py  ffw_bh5_ik.launch.py  ffw_bhg_follower_ai.launch.py  ffw_lg2_leader_ai.launch.py  ffw_lg2_mini_leader.launch.py  ffw_lg2_mini_leader_ai.launch.py  ffw_lg2_mini_leader_ai.launch.py.rej  ffw_lg2_rev2_leader_ai.launch.py  ffw_lg2_rev3_leader_ai.launch.py  ffw_lg2_rev3_leader_current_ai.launch.py  ffw_lg2_rev4_leader_ai.launch.py  ffw_sg2_ai.launch.py  ffw_sg2_follower_ai.launch.py  ffw_sg2_follower_ai_gazebo.launch.py  ffw_sh5_follower_ai.launch.py  ffw_sh5_follower_ai_gazebo.launch.py  ffw_sh5_pack.launch.py  lidar_dual.launch.py
ffw_collision/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_collision/launch/: self_collision.launch.py  test_arm_collision.launch.py
ffw_collision/scripts/: test_arm_collision.py
ffw_collision/src/: self_collision_node.cpp
ffw_description/: CHANGELOG.rst  package.xml
ffw_description/launch/: ffw_bh5_rev1.launch.py  ffw_lg2_rev3.launch.py
ffw_description/meshes/: ffw_bhg_follower
ffw_description/rviz/: ffw_bg2.rviz  ffw_sg2.rviz
ffw_gravity_compensation_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_gravity_compensation_controller/src/: gravity_compensation_controller.cpp  gravity_compensation_controller_parameters.yaml
ffw_interfaces/: CMakeLists.txt  package.xml
ffw_interfaces/msg/: HandJoints.msg
ffw_joint_state_broadcaster/: CMakeLists.txt  ffw_joint_state_broadcaster_plugin.xml  package.xml
ffw_joint_state_broadcaster/include/ffw_joint_state_broadcaster/: ffw_joint_state_broadcaster.hpp  visibility_control.h
ffw_joint_state_broadcaster/src/: ffw_joint_state_broadcaster.cpp  ffw_joint_state_broadcaster_parameters.yaml
ffw_joint_trajectory_command_broadcaster/: CHANGELOG.rst  package.xml
ffw_joystick_controller/: CHANGELOG.rst  package.xml
ffw_kinematics/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_kinematics/include/ffw_kinematics/: arm_ik_solver.hpp  chainiksolverpos_nr_jl.hpp  ffw_arm_ik_solver.hpp  hand_ik_solver.hpp  position_only_ik_vel_solver.hpp
ffw_kinematics/launch/: ffw_arm_ik.launch.py  kdl_ik_solver_cpp.launch.py  pinocchio_vr_ik.launch.py  realtime_ik_demo.launch.py  realtime_ik_solver.launch.py  realtime_ik_solver_jl.launch.py
ffw_kinematics/src/: arm_ik_solver.cpp  arm_ik_solver_pinoccino.cpp  arm_ik_solver_pyroki.py  chainiksolverpos_nr_jl.cpp  ffw_arm_ik_solver.cpp  ffw_arm_trajectory_commander.cpp  hand_ik_solver.cpp  kdl_ik_solver.cpp  position_only_ik_vel_solver.cpp  pyroki_test.py  realtime_ik_solver.cpp  realtime_ik_solver_jl.cpp  target_pose_publisher.cpp  vr_hand_pose_transformer.cpp
ffw_kinematics_pyroki/: package.xml  setup.cfg  setup.py
ffw_moveit_config/: CHANGELOG.rst  package.xml
ffw_navigation/: CHANGELOG.rst  package.xml
ffw_retargeting/: package.xml  requirements.txt  setup.cfg  setup.py
ffw_robot_manager/: CHANGELOG.rst  package.xml
ffw_robot_state_publisher/: CMakeLists.txt  package.xml
ffw_robot_state_publisher/include/ffw_robot_state_publisher/: ffw_robot_state_publisher.hpp
ffw_robot_state_publisher/src/: ffw_robot_state_publisher.cpp
ffw_spring_actuator_controller/: CHANGELOG.rst  package.xml
ffw_swerve_drive_controller/: CHANGELOG.rst  package.xml
ffw_teleop/: CHANGELOG.rst  package.xml  setup.py
ffw_teleop/ffw_teleop/: body.py  controller.py  controller_n_hand.py  gesture_hand_controller.py  gripper_controller.py  hand.py  hand_controller.py  mobile_teleop.py  pedal_input_node.py  preset_hand_controller.py  vr_publisher_bg2.py  vr_publisher_bh5.py  vr_publisher_bh5_retarget.py  vr_publisher_bh5_whole_body.py  vr_publisher_sg2.py  vr_raw_sg2_consumer.py  vr_raw_sh5_consumer.py  vr_raw_whole_body_consumer.py  vuer_test_body.py  vuer_test_controller.py
ffw_teleop/launch/: gripper_teleop.launch.py  hand_teleop.launch.py  pedal_hardware.launch.py  preset_hand_teleop.launch.py  vr_publisher.launch.py  vr_raw_sg2.launch.py  vr_raw_sh5.launch.py  vr_raw_whole_body.launch.py
robotis_hand_ik_teleop/: CMakeLists.txt  package.xml
robotis_hand_ik_teleop/include/robotis_hand_ik_teleop/: hand_ik_teleop.hpp  position_only_ik_vel_solver.hpp
robotis_hand_ik_teleop/src/: hand_ik_teleop.cpp  position_only_ik_vel_solver.cpp
robotis_hand_teleop/: package.xml  setup.cfg  setup.py
ros2bag_worker_arm/: metadata.yaml
ros2bag_worker_lift_head/: metadata.yaml
system_manager/: Dockerfile  README.md  config.yml  docker-compose.yml  requirements.txt
v_marker_estimation/: CMakeLists.txt  README.md  package.xml  rviz.rviz
v_marker_estimation/include/v_marker_estimation/: holonomic_drive_controller.hpp  laser_processor.hpp
v_marker_estimation/include/v_marker_localization_node/: v_marker_localization_node.hpp
v_marker_estimation/launch/: v_marker_estimation.launch.py
v_marker_estimation/msg/: LaserSample.msg  LaserSampleSet.msg  LaserSampleSetList.msg
v_marker_estimation/param/: v_marker_estimation_config.yaml
v_marker_estimation/src/: cluster_node.cpp  holonomic_drive_controller.cpp  laser_processor.cpp  marker_ab_goal_router.cpp  v_marker_localization_node.cpp
velocity_limit_controller/: CMakeLists.txt  README.md  draft.md  joint_trajectory_controller_analysis.md  package.xml  velocity_limit_plugin.xml
velocity_limit_controller/config/: velocity_limit_controller_example.yaml
velocity_limit_controller/include/velocity_limit_controller/: velocity_limit_controller.hpp
velocity_limit_controller/src/: velocity_limit_controller.cpp
(+189 files in other folders)
