<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_joint_state_broadcaster</name>
  <version>1.0.0</version>
  <description>
    FFW Joint State Broadcaster ROS 2 package that publishes separate joint_states topics
    for each arm (left/right, leader/follower) with actual sensor timestamps.
  </description>
  <maintainer email="ywh@robotis.com">Wonho Yun</maintainer>
  <license>Apache 2.0</license>
  <author email="ywh@robotis.com">Wonho Yun</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>backward_ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
