cmake_minimum_required(VERSION 3.8)
project(ffw_kinematics)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(trajectory_msgs REQUIRED)
find_package(kdl_parser REQUIRED)
find_package(urdf REQUIRED)
find_package(pinocchio REQUIRED)
find_package(Eigen3 REQUIRED)

# ffw Arm IK Solver executable
add_executable(ffw_arm_ik_solver src/ffw_arm_ik_solver.cpp)

target_include_directories(ffw_arm_ik_solver PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

target_compile_features(ffw_arm_ik_solver PUBLIC c_std_99 cxx_std_17)

ament_target_dependencies(ffw_arm_ik_solver
  rclcpp
  sensor_msgs
  geometry_msgs
  std_msgs
  kdl_parser
  urdf
)

# ffw Arm Trajectory Commander executable
add_executable(ffw_arm_trajectory_commander src/ffw_arm_trajectory_commander.cpp)

target_include_directories(ffw_arm_trajectory_commander PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)

target_compile_features(ffw_arm_trajectory_commander PUBLIC c_std_99 cxx_std_17)

ament_target_dependencies(ffw_arm_trajectory_commander
  rclcpp
  sensor_msgs
  std_msgs
  trajectory_msgs
)


# Install C++ executables
install(TARGETS ffw_arm_ik_solver ffw_arm_trajectory_commander
  DESTINATION lib/${PROJECT_NAME})


# Install launch files
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
