<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_robot_state_publisher</name>
  <version>1.1.15</version>
  <description>
    Extended Robot State Publisher for FFW dual-arm humanoid robot.
    Inherits from robot_state_publisher and adds end-effector pose publishing
    using KDL forward kinematics.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache-2.0</license>
  <url type="website">http://ai.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ai_worker</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ai_worker/issues</url>
  <author email="wwj@robotis.com">Woojin Wie</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
