<?xml version="1.0"?>
<package format="3">
  <name>v_marker_estimation</name>
  <version>1.0.0</version>
  <description> Extract a dock pose for a charging station </description>
  <maintainer email="wsh@robotis.com">Sungho Woo</maintainer>
  <license>Proprietary</license>
  <author email = "wsh@robotis.com">Sungho Woo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
